@@ -9,6 +9,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.transaction.annotation.Transactional;
@@ -17,6 +18,8 @@ import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Optional;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -62,6 +65,7 @@ class ProductControllerTest {
 
     @Test
     @DisplayName("상품 등록")
+    @WithMockUser(username = "user1")
     void t2() throws Exception {
         ResultActions resultActions = mvc
                 .perform(
@@ -81,7 +85,10 @@ class ProductControllerTest {
                 .andDo(print());
 
         List<Product> productList = productService.findAll();
-        Product lastProduct= productList.getLast();
+        assertFalse(productList.isEmpty(), "상품 리스트가 비어 있어서는 안 됩니다.");
+        Product lastProduct = productList.get(productList.size() - 1);
+
+        assertEquals("user1", lastProduct.getAdmin().getUsername());
 
         resultActions
                 .andExpect(handler().handlerType(ProductController.class))
@@ -97,6 +104,7 @@ class ProductControllerTest {
 
     @Test
     @DisplayName("상품 수정")
+    @WithMockUser(username = "user1")
     void t3() throws Exception {
         int productId = 1;
         ResultActions resultActions = mvc
@@ -136,6 +144,7 @@ class ProductControllerTest {
 
     @Test
     @DisplayName("상품 삭제")
+    @WithMockUser(username = "user1")
     void t4() throws Exception {
         int productId = 1;
         ResultActions resultActions = mvc
